--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        emacs_version: [26.3, 27.2, 28.2, snapshot]
+        emacs_version: [26.3, 27.2, 28.2, 29.1, snapshot]
         ignore_warnings:
           - true
 
